<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pool Me In</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="greet_me_here">Greet Me Here</string>
    <string name="submit">Submit</string>
    <string name="contact_number">Contact No.</string>
    <string name="phone_label">Phone:</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="gender">Gender:</string>
    <string name="destination_hint">Enter upto 5 Destination Landmarks seperated by comma</string>
    <string name="destination_label">To:</string>
    <string name="source_hint">Your Starting Location</string>
    <string name="source_label">From:</string>
    <string name="name_hint">Your Preferred Name</string>
    <string name="name_label">Name:</string>
    <string name="name">Name</string>
    <string name="contact_hint">Phone Number</string>
    <string name="car_model">Car Model</string>
    <string name="car_model_hint">Which Car Do you have</string>
    <string name="Number_of_people_already_pooled">Number of people already pooled</string>
    <string name="total_capacity_to_pool">Total Capacity of Car</string>
    <string name="total_capacity_to_pool_hint">How many can you pool?</string>

</resources>
