<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        xmlns:android="http://schemas.android.com/apk/res/android">


    <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true" android:shrinkColumns="1" android:layout_marginTop="10dp">
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" android:layout_marginBottom="10dp">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:id="@+id/name_label_in_need_form" android:layout_column="0"
                    android:layout_marginRight="10dp" android:layout_marginLeft="10dp"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/name_input_in_need_form" android:layout_column="1"
                    android:hint="Enter your name" android:singleLine="true"/>
        </TableRow>
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" android:layout_marginBottom="10dp">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/source_label"
                    android:id="@+id/from_label_in_need_form" android:layout_column="0"
                    android:layout_marginLeft="10dp" android:layout_marginRight="10dp"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/from_input_in_need_form" android:layout_column="1"
                    android:hint="@string/source_hint"/>
        </TableRow>
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" android:layout_marginBottom="10dp">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/destination_label"
                    android:id="@+id/to_label_in_need_form" android:layout_column="0"
                    android:layout_marginLeft="10dp" android:layout_marginRight="10dp"
                    android:layout_gravity="top"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/to_input_in_need_form" android:layout_column="1"
                    android:hint="Enter upto 5 Destination Landmarks seperated by comma" android:autoText="false"
                    android:capitalize="words" android:longClickable="false"
                    android:linksClickable="false" android:gravity="top" android:maxHeight="100dp"/>
        </TableRow>
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" android:layout_marginBottom="10dp">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:id="@+id/gender_label_in_need_form" android:layout_column="0"
                    android:layout_marginLeft="10dp" android:layout_marginRight="10dp"/>
            <RadioGroup
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" android:layout_column="1" android:baselineAligned="false"
                    android:clickable="false" android:layout_gravity="left" android:orientation="horizontal">
                <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Male"
                        android:id="@+id/gender_male_radio_in_need_form"
                        android:checked="true" android:layout_gravity="left" android:layout_marginRight="20dp"
                        android:layout_marginTop="6dp"/>
                <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:text="@string/female"
                        android:id="@+id/gender_female_radio_in_need_form" android:layout_gravity="right"
                        android:checked="false" android:layout_marginTop="8dp"/>
            </RadioGroup>

        </TableRow>
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" android:layout_marginBottom="10dp">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_number"
                    android:id="@+id/contact_input_in_need_form" android:layout_column="0"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/contact_input_in_need_form" android:layout_column="1"
                    android:hint="@string/contact_hint" android:autoText="false"
                    android:capitalize="words" android:longClickable="false"
                    android:linksClickable="false" android:gravity="top" android:phoneNumber="true"
                    android:singleLine="true"/>

        </TableRow>
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" android:layout_marginTop="20dp">
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/submit"
                    android:id="@+id/submit_button_on_need_form" android:layout_column="0"
                    android:layout_span="2"/>
        </TableRow>
    </TableLayout>
</RelativeLayout>
